datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum Role {
  ADMIN
  USER
}

model User {
  id                String             @id @default(uuid())
  email             String             @unique
  emailConfirmed    Boolean            @default(false)
  password          String
  role              Role               @default(USER)
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
  deletedAt         DateTime?
  profile           UserProfile?
  UserPasswordReset UserPasswordReset?
  UserEmailConfirm  UserEmailConfirm?
}

model UserProfile {
  id        String  @id @default(uuid())
  user      User    @relation(fields: [userId], references: [id])
  userId    String  @unique
  firstName String?
  lastName  String?
}

model UserPasswordReset {
  id        String    @id @default(uuid())
  user      User      @relation(fields: [userId], references: [id])
  userId    String    @unique
  token     String    @default(uuid())
  createdAt DateTime  @default(now())
  deletedAt DateTime?
}

model UserEmailConfirm {
  id        String    @id @default(uuid())
  user      User      @relation(fields: [userId], references: [id])
  userId    String    @unique
  token     String    @default(uuid())
  createdAt DateTime  @default(now())
  deletedAt DateTime?
}
