//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  emailConfirmed Boolean [not null, default: false]
  password String [not null]
  role Role [not null, default: 'USER']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  profile UserProfile
  UserPasswordReset UserPasswordReset
  UserEmailConfirm UserEmailConfirm
}

Table UserProfile {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  firstName String
  lastName String
}

Table UserPasswordReset {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  token String [not null]
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
}

Table UserEmailConfirm {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  token String [not null]
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
}

Enum Role {
  ADMIN
  USER
}

Ref: UserProfile.userId - User.id

Ref: UserPasswordReset.userId - User.id

Ref: UserEmailConfirm.userId - User.id